--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,10 @@
 !src/*
 !src/*/*
 !src/*/*/*
+!src/*/*/*/*
 src/scilib.egg-info
 src/scilib.egg-info/*
 src/*/__pycache__
 src/*/__pycache__/*
+src/*/*/__pycache__
+src/*/*/__pycache__/*
